# confgen

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
confgen/: __init__.py  __main__.py  _constants.py  _typing.py  cli.py  config.py  constraints.py  curation.py  forcefield.py  generator.py  minimizer.py  mol_io.py  pipeline.py  solvation.py
confgen/to_be_deleted/: complex_handler.py  conformer.py  ff_builder.py  minimizer.py
data/: test_data.smi
data/test_openmm_ex/: conformers.sdf  run_params.json
data/test_openmm_ex_md/: conformers.sdf  input_molecules.smi  run_params.json
data/test_rdkit/: conformers.sdf  run_params.json
data/test_tblite/: conformers.sdf  input_molecules.smi  run_params.json
defaults/: default_config.yaml
tests/: conftest.py  test_config.py  test_constraints.py  test_curation.py  test_forcefield.py  test_generator.py  test_minimizer.py  test_mol_io.py  test_pipeline.py  test_solvation.py
